# my_second_cmake_project

./: CMakeLists.txt  Equilateral_triangle.cpp  Equilateral_triangle.h  Figure.cpp  Figure.h  Isosceles_triangle.cpp  Isosceles_triangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Rhomb.cpp  Rhomb.h  Right_triangle.cpp  Right_triangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
